--- a/src/autogen_doing_ml.ipynb
+++ b/src/autogen_doing_ml.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,185 +221,29 @@
       "How can I help you today?\n",
       "\n",
       "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> NO HUMAN INPUT RECEIVED.\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
       "\u001b[33muser\u001b[0m (to Assistant):\n",
       "\n",
-      "\n",
+      "what is the capital of kenya\n",
       "\n",
       "--------------------------------------------------------------------------------\n",
       "\u001b[31m\n",
       ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
       "\u001b[33mAssistant\u001b[0m (to user):\n",
       "\n",
-      "It appears you haven't provided any details. How can I assist you today?\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> NO HUMAN INPUT RECEIVED.\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33muser\u001b[0m (to Assistant):\n",
-      "\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33mAssistant\u001b[0m (to user):\n",
-      "\n",
-      "If you need assistance, feel free to ask! What can I help you with today?\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> NO HUMAN INPUT RECEIVED.\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33muser\u001b[0m (to Assistant):\n",
-      "\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33mAssistant\u001b[0m (to user):\n",
-      "\n",
-      "It seems there might have been a misunderstanding. If you have any specific calculations or questions, please let me know and I'll be glad to assist you!\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33muser\u001b[0m (to Assistant):\n",
-      "\n",
-      "why is the sky blue?\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33mAssistant\u001b[0m (to user):\n",
-      "\n",
-      "The sky appears blue due to a phenomenon called Rayleigh scattering. Here's a simplified explanation:\n",
-      "\n",
-      "1. **Sunlight and Atmosphere:** Sunlight, which appears white to our eyes, is actually composed of many different colors of light with different wavelengths.\n",
-      "\n",
-      "2. **Interaction with Atmosphere:** When sunlight enters Earth's atmosphere, it collides with molecules and small particles. These molecules are more effective at scattering shorter wavelengths of light, such as blue and violet, than longer wavelengths like red and yellow.\n",
-      "\n",
-      "3. **Blue Light Scattering:** Although violet light is scattered even more than blue, our eyes are more sensitive to blue light and less sensitive to violet light. Additionally, some violet light is absorbed by the upper atmosphere.\n",
-      "\n",
-      "4. **Resulting Blue Sky:** Because blue light is scattered in all directions by the gases and particles in the atmosphere, when we look up into the sky away from the direct path of the sun, we see the scattered blue light.\n",
-      "\n",
-      "This scattering of light causes the sky to appear blue during the day when the sun is high in the sky.\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> NO HUMAN INPUT RECEIVED.\u001b[0m\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33muser\u001b[0m (to Assistant):\n",
-      "\n",
-      "\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33mAssistant\u001b[0m (to user):\n",
-      "\n",
-      "It seems like you didn't respond. If you have any questions or need further assistance, please let me know!\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33muser\u001b[0m (to Assistant):\n",
-      "\n",
-      "tell me what day is today \n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33mAssistant\u001b[0m (to user):\n",
-      "\n",
-      "I'm unable to retrieve real-time data like the current date. However, you can check the date on your device or calendar. If there's anything else you need help with, feel free to ask!\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33muser\u001b[0m (to Assistant):\n",
-      "\n",
-      "why is the sky blue?\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33mAssistant\u001b[0m (to user):\n",
-      "\n",
-      "The sky appears blue due to a phenomenon called Rayleigh scattering. Here's a simplified explanation:\n",
-      "\n",
-      "1. **Sunlight Contains All Colors:** Sunlight looks white but is actually made up of all the colors of the visible spectrum. These colors can be seen in a rainbow.\n",
-      "\n",
-      "2. **Atmosphere Composition:** Earth's atmosphere is composed of many tiny molecules and particles.\n",
-      "\n",
-      "3. **Scattering of Light:** When sunlight reaches Earth’s atmosphere, it collides with these molecules and particles. Shorter wavelengths of light (blue and violet) are scattered in every direction by the molecules and particles in the atmosphere far more efficiently than longer wavelengths (red, yellow, etc.).\n",
-      "\n",
-      "4. **Human Eye Sensitivity:** Although violet light is scattered even more than blue light, our eyes are more sensitive to blue light and less sensitive to violet light. Additionally, some violet light is absorbed by the upper atmosphere.\n",
-      "\n",
-      "5. **Sky Appears Blue:** As a result of this scattering process, the sky appears blue to our eyes most of the time during the day.\n",
-      "\n",
-      "In summary, the blue color of the sky is due to the scattering of sunlight by the molecules and small particles in the atmosphere, with blue light being scattered more than other colors due to its shorter wavelength.\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33muser\u001b[0m (to Assistant):\n",
-      "\n",
-      "what is the square root 2\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33mAssistant\u001b[0m (to user):\n",
-      "\n",
-      "The square root of 2 is approximately 1.414213562. It is an irrational number, which means it cannot be expressed exactly as a simple fraction, and its decimal representation goes on forever without repeating.\n",
-      "\n",
-      "If you need it to more decimal places or have another question, just let me know!\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33muser\u001b[0m (to Assistant):\n",
-      "\n",
-      "what is the speed of light\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33mAssistant\u001b[0m (to user):\n",
-      "\n",
-      "The speed of light in a vacuum is approximately 299,792,458 meters per second, which is commonly rounded to 300,000 kilometers per second or about 186,282 miles per second. This is often denoted by the symbol \\( c \\) and is a fundamental constant in physics.\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33muser\u001b[0m (to Assistant):\n",
-      "\n",
-      "who is the president of sweden\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33mAssistant\u001b[0m (to user):\n",
-      "\n",
-      "Sweden does not have a president. Instead, Sweden is a constitutional monarchy with a parliamentary system of government. The head of state is a monarch, and as of my knowledge cutoff date in 2023, the current king is King Carl XVI Gustaf.\n",
-      "\n",
-      "The head of government is the Prime Minister. As of 2023, the Prime Minister of Sweden is Ulf Kristersson.\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[33muser\u001b[0m (to Assistant):\n",
-      "\n",
-      "quien es el presidente de suecia\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "\u001b[31m\n",
-      ">>>>>>>> USING AUTO REPLY...\u001b[0m\n",
-      "\u001b[33mAssistant\u001b[0m (to user):\n",
-      "\n",
-      "Suecia no tiene presidente. En su lugar, Suecia es una monarquía constitucional con un sistema parlamentario de gobierno. El jefe de estado es un monarca, y hasta la fecha de mi conocimiento en 2023, el rey actual es el Rey Carlos XVI Gustavo (Carl XVI Gustaf).\n",
-      "\n",
-      "El jefe de gobierno es el Primer Ministro. Hasta 2023, el Primer Ministro de Suecia es Ulf Kristersson.\n",
-      "\n",
-      "Si tienes alguna otra pregunta, no dudes en preguntar.\n",
+      "The capital of Kenya is Nairobi. How else can I assist you?\n",
       "\n",
       "--------------------------------------------------------------------------------\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ChatResult(chat_id=None, chat_history=[{'content': 'How can I help you today?', 'role': 'assistant'}, {'content': 'what is the capital of kenya', 'role': 'user'}, {'content': 'The capital of Kenya is Nairobi. How else can I assist you?', 'role': 'assistant'}], summary='The capital of Kenya is Nairobi. How else can I assist you?', cost=({'total_cost': 0, 'gpt-4o-2024-05-13': {'cost': 0, 'prompt_tokens': 734, 'completion_tokens': 123, 'total_tokens': 857}}, {'total_cost': 0, 'gpt-4o-2024-05-13': {'cost': 0, 'prompt_tokens': 103, 'completion_tokens': 15, 'total_tokens': 118}}), human_input=[])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
