update with dspy chatgpt

--- a/src/DSPY_NEWVER.ipynb
+++ b/src/DSPY_NEWVER.ipynb
@@ -10,7 +10,7 @@
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with '.venv (Python 3.12.6)' requires the ipykernel package.\n",
+      "\u001b[1;31mRunning cells with '.venv (Python 3.11.10)' requires the ipykernel package.\n",
       "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
       "\u001b[1;31mCommand: '/home/gilbe/ai_assistant/.venv/bin/python -m pip install ipykernel -U --force-reinstall'"
      ]
@@ -22,31 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llama3 = dspy.OllamaLocal(model=\"gemma\")\n",
-    "dspy.configure(lm=llama3)\n",
-    "qa = dspy.ChainOfThought(\"question -> answer\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = qa(question=\"what is the capital of El Salvador?\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response.answer\n"
+    "lm = dspy.LM(\"openai/gpt-o-mini\")\n"
    ]
   }
  ],
@@ -57,16 +37,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
