rearange and delete broken or unused code

--- a/src/TEXT_TO_SPEECH.ipynb
+++ b/src/TEXT_TO_SPEECH.ipynb
@@ -194,7 +194,7 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "text = \"Hello world! Text to speech, my name is gilberto!\"\n",
+    "text = \"Hello world! Text to speech, what time is it?\"\n",
     "\n",
     "with torch.inference_mode(), torch.amp.autocast(device_type=\"cuda\"):\n",
     "    processed, lengths = processor(text)\n",
